# CoachFinder

./: .gitignore  README.md  docker-compose.yml
back-end/: .python-version  api_response.py  app.py  auth.py  config.py  models.py  pyproject.toml  requirements.txt  routes.py
back-end/migrations/versions/: 605d8ca87e4d_.py  d500ab0e87fa_.py
front-end/: package-lock.json  package.json
front-end/src/: App.vue  main.js  router.js
front-end/src/components/coaches/: CoachFilter.vue  CoachForm.vue  CoachItem.vue
front-end/src/components/layout/: TheHeader.vue
front-end/src/components/ui/: BaseBadge.vue  BaseButton.vue
front-end/src/pages/: NotFound.vue
front-end/src/pages/auth/: UserAuth.vue
front-end/src/pages/coaches/: CoachDetail.vue  CoachRegistration.vue  CoachesList.vue
front-end/src/pages/requests/: ContactCoach.vue  RequestsReceived.vue
front-end/src/store/: index.js
front-end/src/store/modules/auth/: actions.js  getters.js  index.js  mutations.js
front-end/src/store/modules/coaches/: actions.js  getters.js  index.js  mutations.js
front-end/src/store/modules/requests/: actions.js  getters.js  index.js  mutations.js
